--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,6 +7,10 @@ body {
   margin: 0;
   padding: 0;
   color: #fff;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .App {
